# facts

./: .travis.yml  CHANGELOG.md  README.md  facts.cabal
Data/: Refined.hs
