name:                 facts
version:              0.0.1.0
cabal-version:        1.18
tested-with:          GHC==8.2.2, GHC==8.4.3
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/facts
bug-reports:          https://github.com/mrkkrp/facts/issues
category:             Data
synopsis:             Refined types
build-type:           Simple
description:          Refined types.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/facts.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.10 && < 5.0
                    , exceptions       >= 0.6  && < 0.11
                    , mtl              >= 2.0  && < 3.0
                    , template-haskell >= 2.10 && < 2.14
  exposed-modules:    Data.Refined
  if flag(dev)
    ghc-options:      -Wall -Werror -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
                      -Wnoncanonical-monadfail-instances
  else
    ghc-options:      -Wall
  default-language:   Haskell2010
